feature34.css
div.feature-container {
    width: 100vw;
    padding: 30px 0; 
    font-family: 'Lato', sans-serif;
    font-size: 13px;
    line-height: 1.6;
    color: #596375;
}

div.feature-box > p {
    max-height: 100%;
    text-align: justify;
    margin: 0 auto;
} 

.feature-hover:hover {
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); 
}


div.feature-box {
    margin: 20px auto;
    text-align: center;
    padding: 10px;
    background-color: white;
    width: 200px;
    height: 200px;
}

@media (max-width: 525px) {
    .feature-container {
        flex-direction: column;
        width: 100%;
        height: 100%;
    }

    div.feature-box {
        padding: 20px;
    }
}
    

    @media (min-width: 526px) and (max-width: 855px) {
        div.feature-container {
           display: flex;
           flex-flow: row wrap;
           align-items: center;
           margin: 0 auto;
        }

        div.feature-box {
            flex-basis: 31%;
        }
    }


    @media (min-width: 856px) {

        div.feature-container {
            display: flex;
            flex-direction: row;
            justify-content: space-around;
            align-items: flex-start;
            flex-flow: row wrap;
        }
        
        div.feature-box {
            display: flex;
            flex-direction: column;
            justify-content: center;
            align-items: center;
            flex-basis: 18%;
        }


}

